--- a/YaLearn/Controllers/Storyboards/Base.lproj/Main.storyboard
+++ b/YaLearn/Controllers/Storyboards/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -72,7 +73,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="aj7-Zd-TPR"/>
                     </view>
-                    <navigationItem key="navigationItem" id="srt-tW-HW8"/>
+                    <navigationItem key="navigationItem" id="srt-tW-HW8">
+                        <barButtonItem key="leftBarButtonItem" title="HOME" id="Q3J-Yb-G68"/>
+                        <barButtonItem key="rightBarButtonItem" title="..." id="8qc-bT-2sv"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="HomeTableView" destination="KSp-It-VUb" id="Nq1-zD-kKQ"/>
                     </connections>
@@ -97,13 +101,13 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </searchBar>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="6Yu-ri-eZh" firstAttribute="leading" secondItem="mKh-zJ-gH9" secondAttribute="leading" id="CfH-Ig-Ft2"/>
-                                    <constraint firstAttribute="bottom" secondItem="6Yu-ri-eZh" secondAttribute="bottom" id="Xxe-0C-5pJ"/>
+                                    <constraint firstItem="6Yu-ri-eZh" firstAttribute="top" secondItem="mKh-zJ-gH9" secondAttribute="top" id="Hrn-g6-b3t"/>
                                     <constraint firstAttribute="height" constant="50" id="alH-mR-fNg"/>
-                                    <constraint firstItem="6Yu-ri-eZh" firstAttribute="top" secondItem="mKh-zJ-gH9" secondAttribute="top" id="cdG-JB-D8o"/>
-                                    <constraint firstAttribute="trailing" secondItem="6Yu-ri-eZh" secondAttribute="trailing" id="q0I-CE-rXh"/>
+                                    <constraint firstAttribute="trailing" secondItem="6Yu-ri-eZh" secondAttribute="trailing" id="i6j-hO-zTY"/>
+                                    <constraint firstAttribute="bottom" secondItem="6Yu-ri-eZh" secondAttribute="bottom" id="xKK-q7-gha"/>
+                                    <constraint firstItem="6Yu-ri-eZh" firstAttribute="leading" secondItem="mKh-zJ-gH9" secondAttribute="leading" id="zaW-hX-Gku"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OlD-Lb-lvG">
@@ -125,6 +129,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="ZQc-hc-B7e">
                         <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" title="HOME" id="yKH-r6-6SZ"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AjY-e7-3xy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -138,10 +143,40 @@
                     <view key="view" contentMode="scaleToFill" id="EXi-nk-Ps6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0t-Lb-7ov">
+                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tQp-yp-y2z">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Kgs-Wg-YQa">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="7Pk-8E-Dd3">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="leading" secondItem="D4U-0R-Xz0" secondAttribute="leading" id="2gj-cR-g2w"/>
+                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="top" secondItem="D4U-0R-Xz0" secondAttribute="top" id="7T2-Mh-z3U"/>
+                            <constraint firstItem="D4U-0R-Xz0" firstAttribute="bottom" secondItem="p0t-Lb-7ov" secondAttribute="bottom" id="7WX-rE-01q"/>
+                            <constraint firstItem="D4U-0R-Xz0" firstAttribute="trailing" secondItem="p0t-Lb-7ov" secondAttribute="trailing" id="vf9-TF-wbA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="D4U-0R-Xz0"/>
                     </view>
-                    <navigationItem key="navigationItem" id="7PP-vW-CnR"/>
+                    <navigationItem key="navigationItem" id="7PP-vW-CnR">
+                        <barButtonItem key="leftBarButtonItem" title="HOME" id="I3R-iM-R1A"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uw7-oZ-e7J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -154,10 +189,24 @@
                     <view key="view" contentMode="scaleToFill" id="uJw-Ws-1MM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mKj-zv-dlX">
+                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="vc9-wU-QQc" firstAttribute="trailing" secondItem="mKj-zv-dlX" secondAttribute="trailing" id="UmZ-GF-dq8"/>
+                            <constraint firstItem="mKj-zv-dlX" firstAttribute="top" secondItem="vc9-wU-QQc" secondAttribute="top" id="bdW-Uf-riy"/>
+                            <constraint firstItem="mKj-zv-dlX" firstAttribute="leading" secondItem="vc9-wU-QQc" secondAttribute="leading" id="jb4-5f-jSY"/>
+                            <constraint firstItem="vc9-wU-QQc" firstAttribute="bottom" secondItem="mKj-zv-dlX" secondAttribute="bottom" id="xX5-8e-Fx5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="vc9-wU-QQc"/>
                     </view>
-                    <navigationItem key="navigationItem" id="OSj-qt-0Z6"/>
+                    <navigationItem key="navigationItem" id="OSj-qt-0Z6">
+                        <barButtonItem key="leftBarButtonItem" title="HOME" id="N5d-n3-ZnK"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOr-oa-FdC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -173,7 +222,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="53a-gh-n6o"/>
                     </view>
-                    <navigationItem key="navigationItem" id="sXK-gu-RWB"/>
+                    <navigationItem key="navigationItem" id="sXK-gu-RWB">
+                        <barButtonItem key="leftBarButtonItem" title="HOME" id="kiL-iB-CgT"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7mS-76-RYe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
