--- a/YaLearn/Controllers/Storyboards/Base.lproj/Main.storyboard
+++ b/YaLearn/Controllers/Storyboards/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -110,20 +109,37 @@
                                     <constraint firstItem="6Yu-ri-eZh" firstAttribute="leading" secondItem="mKh-zJ-gH9" secondAttribute="leading" id="zaW-hX-Gku"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OlD-Lb-lvG">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0t-Lb-7ov">
                                 <rect key="frame" x="0.0" y="94" width="375" height="524"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </tableView>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bBO-Je-LAN">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Kgs-Wg-YQa">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="80" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <size key="customSize" width="80" height="100"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="leading" secondItem="vQH-yC-iAd" secondAttribute="leading" id="37I-rg-Rqr"/>
                             <constraint firstItem="mKh-zJ-gH9" firstAttribute="top" secondItem="vQH-yC-iAd" secondAttribute="top" id="H0B-yN-mQP"/>
                             <constraint firstItem="mKh-zJ-gH9" firstAttribute="leading" secondItem="vQH-yC-iAd" secondAttribute="leading" id="PQa-2Z-LeH"/>
-                            <constraint firstItem="OlD-Lb-lvG" firstAttribute="top" secondItem="mKh-zJ-gH9" secondAttribute="bottom" id="RYN-33-Ug6"/>
-                            <constraint firstItem="OlD-Lb-lvG" firstAttribute="leading" secondItem="vQH-yC-iAd" secondAttribute="leading" id="gWn-NW-7IC"/>
-                            <constraint firstItem="vQH-yC-iAd" firstAttribute="trailing" secondItem="OlD-Lb-lvG" secondAttribute="trailing" id="kaf-gx-slL"/>
-                            <constraint firstItem="vQH-yC-iAd" firstAttribute="bottom" secondItem="OlD-Lb-lvG" secondAttribute="bottom" id="r27-g4-dSO"/>
+                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="top" secondItem="vQH-yC-iAd" secondAttribute="top" constant="50" id="fkH-Jy-D1B"/>
+                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="bottom" secondItem="vQH-yC-iAd" secondAttribute="bottom" id="mZF-pE-rnW"/>
                             <constraint firstItem="vQH-yC-iAd" firstAttribute="trailing" secondItem="mKh-zJ-gH9" secondAttribute="trailing" id="ub8-NT-r3o"/>
+                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="trailing" secondItem="vQH-yC-iAd" secondAttribute="trailing" id="xT5-EH-g2T"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vQH-yC-iAd"/>
                     </view>
@@ -131,6 +147,9 @@
                         <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" title="HOME" id="yKH-r6-6SZ"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="modCollecList" destination="p0t-Lb-7ov" id="Eff-JI-4hG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AjY-e7-3xy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -143,35 +162,7 @@
                     <view key="view" contentMode="scaleToFill" id="EXi-nk-Ps6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="p0t-Lb-7ov">
-                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tQp-yp-y2z">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Kgs-Wg-YQa">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="7Pk-8E-Dd3">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="leading" secondItem="D4U-0R-Xz0" secondAttribute="leading" id="2gj-cR-g2w"/>
-                            <constraint firstItem="p0t-Lb-7ov" firstAttribute="top" secondItem="D4U-0R-Xz0" secondAttribute="top" id="7T2-Mh-z3U"/>
-                            <constraint firstItem="D4U-0R-Xz0" firstAttribute="bottom" secondItem="p0t-Lb-7ov" secondAttribute="bottom" id="7WX-rE-01q"/>
-                            <constraint firstItem="D4U-0R-Xz0" firstAttribute="trailing" secondItem="p0t-Lb-7ov" secondAttribute="trailing" id="vf9-TF-wbA"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="D4U-0R-Xz0"/>
                     </view>
                     <navigationItem key="navigationItem" id="7PP-vW-CnR">
